Bug 103895 - Numbers within vertical ruler not displayed correctly using Harfbuzz with CoreType on OS X
Summary: Numbers within vertical ruler not displayed correctly using Harfbuzz with Cor...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks: Font-Rendering Regressions-HarfBuzz
  Show dependency treegraph
 
Reported: 2016-11-12 23:05 UTC by Thorsten Wagner
Modified: 2017-03-03 03:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (22.21 KB, image/tiff)
2016-11-12 23:05 UTC, Thorsten Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2016-11-12 23:05:35 UTC
Created attachment 128706 [details]
Screenshot

Using new Harfbuzz common layout engine with current master causes misaligned numbers within vertical ruler of Writer, Impres, Draw (see attached screenshot). Issue seems to be present on OS X only.
Comment 1 V Stuart Foote 2016-11-13 06:42:51 UTC
This would be the CoreTypes analog to bug 100986 on Windows
Comment 2 V Stuart Foote 2016-11-13 06:48:53 UTC
OT  @Thorsten, could you please have a look at the STR for bug 103767 --Text along Path (old Font Work) is broken for type "rotate"--and add comments on applicability to OS X
Comment 3 Commit Notification 2016-11-13 17:07:44 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ebfe8bb2b2cfc3dba063260bf746db923a3693f2

tdf#103895: Another fix too macOS glyph bounding

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.