tdf#103895: Another fix too macOS glyph bounding

Apply font rotation when calculating glyph bounding rectangle.

Change-Id: I9c533ec3b33a5858d46b60d1700a50d3b6f915a4